--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand logo" href="{% url home %}">KOMMKAT</a>
+            <a class="brand logo" href="{% url home %}">COMM.KAT</a>
 
             {% if user.is_authenticated %}
             <div class="nav-collapse collapse">
