--- a/discussion/templates/discussion/search.html
+++ b/discussion/templates/discussion/search.html
@@ -1,11 +1,51 @@
 {% extends "discussion/base.html" %}
 
-{% block forum_content %}
-    <div class="forum-search">
-        <h2>Search</h2>
-        {% include 'discussion/_search_form.html' %}
-    </div>
+{% block sidebar %}
+    <div class="post-list">
+        <div class="sidebar-header">
+            <button class="btn btn-primary btn-small new-post-btn"><i class="icon-edit icon-white"></i></button>
+            <i class="icon-search icon-white"></i>
+            <form action="{% url discussion_search %}" method="POST" class="forum-search-form navbar-search pull-left">
+                {% csrf_token %}
+                {{ search_form.search }}
+            </form>
+        </div>
+        <div id="post-list-wrap">
+            <div id="post-list-inner">
+                {% for post in object_list %}
+                    <article class="post post-list-{{ forloop.counter }}" id="post-{{ post.id }}" data-url="{{ post.get_absolute_url }}">
+                        {% url discussion_post pk=post.pk discussion_slug=object.slug as post_detail %}
+                        <div class="post-info">
+                            <header class="post-header">
+                                <div class="post-author">
+                                    <h5 class="user-name">{{ post.user.get_full_name }}</h5>
+                                    <time pubdate="{{ post.time }}" class="post-date">{{ post.time|date:"d M Y" }}</time>
+                                </div>
+                                <div class="tags">
+                                    {% if post.tag_set.all %}
+                                        Tags:
+                                        {% for tag in post.tag_set.all %}
+                                            {{ tag }}
+                                        {% endfor %}
+                                    {% endif %}
+                                </div>
+                            </header>
+                            <section class="post-body">
+                                {{ post.body|truncatechars:70|urlize }}
+                            </section>
 
+                            {% if post.comment_set.all.count %}
+                                <div class="comment-count">{{ post.comment_set.all.count}}</div>
+                            {% endif %}
+                        </div>
+                    </article>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block forum_content %}
     <div class="forum-search-results">
     {% if object_list %}
         <h5><span class="num-results">{{ object_list.all.count }}</span> results</h5>
@@ -14,9 +54,6 @@
                 <div class="post-info">
                     {% include 'discussion/_post_detail.html' %}
                     <div class="comment-count">{{ post.comment_set.all.count|default:"No" }} repl{{ post.comment_set.all.count|pluralize:"y,ies" }}</div>
-                    <div class="post-links">
-                        <a href="{% url discussion_post discussion_slug=post.discussion.slug pk=post.pk %}" class="post-permalink">Full conversation</a>
-                    </div>
                 </div>
             </article>
         {% endfor %}
@@ -26,4 +63,73 @@
     </div>
 
     <a href="{% url discussion_index %}" class="index-link">All discussions</a>
+{% endblock %}
+
+
+{% block extra_script %}
+    <script>
+        function loadUrl(url) {
+            $('#forum-content').load(url + ' .post', function() {
+                $('.reply-btn').on('click', function() {
+                    $('#reply-dialog').modal();
+                    $('#reply-dialog .save-btn').on('click', function() {
+                        var saveBtn = $(this);
+                        saveBtn.attr('disabled', 'disabled').text('Sending Reply...');
+                        $('#reply-dialog .comment-form').ajaxSubmit({
+                            success: function() {
+                                $('#reply-dialog').modal('hide');
+                                loadUrl(url);
+                                $('#post-list-wrap').load(sidebarUrl + ' #post-list-inner', function() {
+                                    init();
+                                });
+                            },
+                            error: function(jqXHR, textStatus, errorThrown) {
+                                saveBtn.removeAttr('disabled').text('Send Reply');
+                                var text = $(jqXHR.responseText);
+                                $('#reply-dialog .modal-body').replaceWith(text.find('.modal-body'))
+                            }
+                        });
+                    });
+                })
+            });
+        }
+
+
+        function init() {
+            $('.post-list .post').click(function() {
+                $('.post.active').removeClass('active');
+                $(this).addClass('active');
+                url = $(this).data('url');
+                loadUrl(url);
+            })
+        }
+
+        $(document).ready(function() {
+            init();
+
+            $($('.post').get(0)).trigger('click');
+
+            $('.new-post-btn').on('click', function() {
+                $('#new-post-dialog').modal();
+                $('#new-post-dialog .save-btn').on('click', function() {
+                    var saveBtn = $(this);
+                    saveBtn.attr('disabled', 'disabled').text('Posting Message...');
+                    $('#new-post-dialog .post-form').ajaxSubmit({
+                        success: function() {
+                            $('#new-post-dialog').modal('hide');
+                            $('#post-list-wrap').load(sidebarUrl + ' #post-list-inner', function() {
+                                init();
+                            });
+                        },
+                        error: function(jqXHR, textStatus, errorThrown) {
+                            saveBtn.removeAttr('disabled').text('Send Reply');
+                            var text = $(jqXHR.responseText);
+                            $('#new-post-dialog .modal-body').replaceWith(text.find('.modal-body'))
+                        }
+                    });
+                })
+            })
+
+        })
+    </script>
 {% endblock %}
