Added tags to post detail view.

--- a/discussion/static/discussion/styles/discussion.css
+++ b/discussion/static/discussion/styles/discussion.css
@@ -519,3 +519,9 @@ body.discussion #forum-content .post .user-name {
 .icon-remove-custom{
     margin-left: 5px;
 }
+
+.tags {
+    position: absolute;
+    left: 118px;
+    top: 26px;
+}
