--- a/discussion/templates/discussion/_post_detail.html
+++ b/discussion/templates/discussion/_post_detail.html
@@ -6,6 +6,13 @@
         <a href="#" class="avatar" title="{{ post.user.get_full_name }}"><img src="{% gravatar_for_user post.user 90 %}"/><div>{{ post.user.get_full_name }}</div></a>
 {#    <time pubdate="{{ post.time }}" class="post-date">{{ post.time|date:"d/m/Y" }}</time>#}
   </div>
+    <div class="tags">
+        {% if post.tag_set.all %}
+            {% for tag in post.tag_set.all %}
+                <span class="label label-info">{{ tag }}</span>
+            {% endfor %}
+        {% endif %}
+    </div>
     <button class="btn btn-small pull-right reply-btn"><i class="icon-share-alt" style="-webkit-transform: scaleX(-1);"></i> Reply</button>
 </header>
 <section class="post-body">
