--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -3,10 +3,10 @@
 <head>
     <title>AISEC</title>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/chosen.css"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css"/>
     {% load selectable_tags %}
     {% include_jquery_libs %}
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 
     {% block extrahead %}
     {% endblock %}
@@ -53,6 +53,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.form.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.autogrow.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.placeholder.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/chosen.jquery.js"></script>
     <script src="{{ STATIC_URL }}discussion/scripts/discussion.js"></script>
 
     <script>
