--- a/account/templates/profiles/profile_list.html
+++ b/account/templates/profiles/profile_list.html
@@ -46,6 +46,7 @@
         -moz-transform: rotate(-0deg);
         position: static;
         margin: 10px;
+        min-height: 150px;
     }
 
     .profiles .avatar img {
