--- a/discussion/static/discussion/styles/discussion.css
+++ b/discussion/static/discussion/styles/discussion.css
@@ -376,7 +376,7 @@ body.discussion .post-list .post:hover .comment-count {
     float: left;
     margin: 0 6px 0 0;
     text-align: center;
-    font-family: "Marker Felt", sans-serif;
+    font-family: "Marker Felt", "Comic Sans MS", sans-serif;
     text-decoration: none;
     color: #333;
     -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, .25);
